Bug 1159558 - Eliminate initial notifies. r=jww

They've proven themselves to be a hassle, and I think we can live without them.